--- a/Curvemisson/Script/TestAutomation/TestAutomation.asmdef
+++ b/Curvemisson/Script/TestAutomation/TestAutomation.asmdef
@@ -1,12 +1,16 @@
 {
-    "name": "UnitTest",
+    "name": "TestAutomation",
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:60e31e67007667b4c99acdb1cf7fcf9f",
         "GUID:aa90ba4ba823a3d42807789b067abaf8"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "iOS"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
